--- a/autocomplete-tries/css/style.css
+++ b/autocomplete-tries/css/style.css
@@ -22,3 +22,12 @@ ul li:hover{
 ul li strong{
     background-color: gold;
 }
+#search {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
